fixing font for h1

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -10,3 +10,7 @@ nav {
     text-align: center;
     background-color: lightblue;
 }
+
+.h1headingindex{
+    font-family: 'Montserrat', sans-serif;
+}
