--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,11 +1,15 @@
 body{
     background-color: #edddd0;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+
 }
 
 main{
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+}
+imgg{
     grid-column: 1/-1;
+
 }
 .h1headingindex{
     font-family: 'Montserrat', sans-serif;
@@ -27,6 +31,7 @@ footer{
     background-color: #a6cad4;
     text-align: center;
     grid-column: 1/-1;
+
 }
 
 li{
