--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,15 +2,15 @@ body{
     background-color: #edddd0;
 
 }
-
 main{
     display: grid;
     grid-template-columns: 2fr 1fr;
 }
-imgg{
-    grid-column: 1/-1;
-
+aside{
+    grid-column: 2;
+    grid-row: 1;
 }
+
 .h1headingindex{
     font-family: 'Montserrat', sans-serif;
 }
@@ -18,7 +18,6 @@ imgg{
 header{
     background-color: #a6cad4;
     text-align: center;
-    grid-column: 1/-1;
 }
 
 .navlist{
@@ -30,10 +29,13 @@ header{
 footer{
     background-color: #a6cad4;
     text-align: center;
-    grid-column: 1/-1;
 
 }
 
 li{
     padding: 0 10px;
+}
+
+p{
+    margin: 0%;
 }
