--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,8 +2,53 @@ body{
     background-color: #edddd0;
 
 }
+@media (max-width: 600px) {
+    .coursesection{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        border-bottom: 1px solid black;
+        padding-bottom: 10px;
+        margin-bottom: 20px;
+    }
+    .coursep{
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .coursesection3{
+        padding-bottom: 10px;
+    }
+    .navlist{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        list-style-type: none;
+        gap: 10px;
+    }
+    
+    
+}
 
-main{
+.coursesection{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    border-bottom: 1px solid black;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+}
+
+.coursep{
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.coursesection3{
+    padding-bottom: 10px;
+}
+
+
+.indexmain{
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 20% 60% 20%;
@@ -54,4 +99,24 @@ li{
 
 p{
     margin: 0%;
+}
+
+@media (max-width: 600px) {
+    .coursesection{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        border-bottom: 1px solid black;
+        padding-bottom: 10px;
+        margin-bottom: 20px;
+    }
+    .coursep{
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .coursesection3{
+        padding-bottom: 10px;
+    }
+    
+    
 }
