--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -19,9 +19,13 @@ body{
     padding-bottom: 10px;
 }
 
+.coursp3{
+    grid-row: 3;
+}
+
 .coursesection2{
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 3fr;
     padding-bottom: 10px;
 
 }
@@ -89,6 +93,7 @@ p{
     .coursesection{
         display: grid;
         grid-template-columns: 1fr 2fr;
+        grid-template-rows: 1fr 3fr 1fr;
         border-bottom: 1px solid black;
         padding-bottom: 10px;
         margin-bottom: 20px;
@@ -108,6 +113,7 @@ p{
     .coursesection2{
         display: grid;
         grid-template-columns: 1fr 2fr;
+        grid-template-rows: 1fr 3fr 1fr;
     }
     .navlist{
         flex-direction: row;
