--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -9,10 +9,11 @@ body{
 }
 .coursesection{
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 4fr;
     border-bottom: 1px solid black;
     padding-bottom: 10px;
     margin-bottom: 20px;
+    margin: 0px;
 }
 .coursep1{
     padding-top: 10px;
@@ -25,7 +26,7 @@ body{
 
 .coursesection2{
     display: grid;
-    grid-template-rows: 1fr 1fr 3fr;
+    grid-template-rows: 1fr 1fr 4fr;
     padding-bottom: 10px;
 
 }
