--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,8 +2,43 @@ body{
     background-color: #edddd0;
 
 }
+.coursemain{
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 10px;
+}
+.coursesection{
+    display: grid;
+    grid-template-rows: 1fr 1fr 4fr;
+    border-bottom: 1px solid black;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+    margin: 0px;
+}
+.coursep1{
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
 
-main{
+.coursp3{
+    grid-row: 3;
+}
+
+.coursesection2{
+    display: grid;
+    grid-template-rows: 1fr 1fr 4fr;
+    padding-bottom: 10px;
+
+}
+.navlist{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    list-style-type: none;
+    gap: 10px;
+}
+
+.indexmain{
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 20% 60% 20%;
@@ -36,11 +71,6 @@ header{
     text-align: center;
 }
 
-.navlist{
-    display: flex;
-    justify-content: center;
-    list-style-type: none;
-}
 
 footer{
     background-color: #a6cad4;
@@ -54,4 +84,42 @@ li{
 
 p{
     margin: 0%;
+}
+
+@media (min-width: 600px) {
+    .coursemain{
+        display: flex;
+        flex-direction: column;
+    }
+    .coursesection{
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        grid-template-rows: 1fr 3fr 1fr;
+        border-bottom: 1px solid black;
+        padding-bottom: 10px;
+        margin-bottom: 20px;
+    }
+    .coursep1{
+        grid-row: 0;
+        grid-column: 0;
+    }
+    .coursep2{
+        grid-row: 3;
+        grid-column: 0;
+    }
+    .coursep3{
+        grid-row: 2;
+        grid-column: 2;
+    }
+    .coursesection2{
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        grid-template-rows: 1fr 3fr 1fr;
+    }
+    .navlist{
+        flex-direction: row;
+        justify-content: center;
+        list-style-type: none;
+        gap: 10px;
+    }
 }
