--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -10,7 +10,7 @@ body{
 .coursesection{
     display: grid;
     grid-template-rows: 1fr 1fr 4fr;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid grey;
     padding-bottom: 10px;
     margin-bottom: 20px;
     margin: 0px;
@@ -95,7 +95,7 @@ p{
         display: grid;
         grid-template-columns: 1fr 2fr;
         grid-template-rows: 1fr 3fr 1fr;
-        border-bottom: 1px solid black;
+        border-bottom: 2px solid black;
         padding-bottom: 10px;
         margin-bottom: 20px;
     }
